<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textView_title"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageViewLogoApp"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:contentDescription="@string/imageView_logoApp_contentDescription"
                app:srcCompat="@drawable/logo" />

            <Button
                android:id="@+id/buttonLoadFromUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_loadFromUrl"
                />
            <Button
                android:id="@+id/buttonLoadFromAppResources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonLoadFromAppResources" />
            <Button
                android:id="@+id/buttonLoadFromStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_loadImageFromStorage" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>