<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadFromUrlActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <EditText
                android:id="@+id/editTextUriImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/textUrlDirection" />
            <Button
                android:id="@+id/buttonLoadFromUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_load" />

            <ImageView
                android:id="@+id/imageViewImageLoadedFromUrl"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_gravity="center"
                android:contentDescription="@string/imageViewLoaded"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/empty_image" />
            <TextView
                android:id="@+id/textViewCodeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_code"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textViewCodeSourceUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textUrlDirection" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>